@@ -1,4 +1,5 @@
 * Dependent options
+* Color picker dialog (idea was taken from http://www.anddev.org/announce_color_picker_dialog-t10771.html)
 
 ===== 0.7.18 (??? ??, 2010) =====
 * Local library activity has been moved to a separate process
